# django-base

./: .env.sample  .gitignore  INSTALL.md  README.md  docker-compose.development.yml  docker-compose.yml
app/: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
app/api/: urls.py  views.py
app/api/templates/api/: index.html
app/config/: settings.py  urls.py
app/users/: admin.py  models.py
app/users/migrations/: 0001_initial.py
db/: Dockerfile
